--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 ﻿cmake_minimum_required (VERSION 3.17)
 
-add_executable (Pong "main.cpp" "Engine.h" "Coord.h" "Engine.cpp" "Board.h" "Paddle.h")
+add_executable (Pong "main.cpp" "Engine.h" "Coord.h" "Engine.cpp" "Board.h" "Paddle.h" "Ball.h")
 
 find_package(SDL2 REQUIRED)
 
